# brea

./: .gitignore  Cargo.toml  MODEL.md  README.md  TESTS.md  TYPES.md  benchmark.txt  output.txt
.cursor/rules/: db.rules.mdc  rust.rules.mdc
.github/workflows/: benchmark.yml
crates/brea-core/: Cargo.toml
crates/brea-core/src/: db.rs  display.rs  error.rs  graph.rs  lib.rs
crates/brea-core/src/db/: migrations.rs  mod.rs  queries.rs  types.rs
crates/brea-scrapers/: Cargo.toml
crates/brea-scrapers/src/: argenprop.rs  lib.rs
debug/: argenprop_House_boca_1.html  argenprop_House_boca_3.html  argenprop_sample.html  empty.html
dev/bench/: README.md
dev/bench/data/: data.js
src/: main.rs
tests/: Cargo.toml
tests/benches/: performance.rs
tests/integration/: export.rs  list.rs  main.rs  migrations.rs  mod.rs  rollback.rs
