[package]
name = "brea"
version = "0.1.0"
edition = "2021"
description = "BREA Real Estate Analyzer - A tool to analyze real estate data from Buenos Aires"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
scraper = "0.18"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tabled = { version = "0.12.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.24"
img_hash = "3.2"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
async-trait = "0.1"
futures = "0.3"
brea-core = { path = "crates/brea-core" }
brea-scrapers = { path = "crates/brea-scrapers" }
csv = "1.3"
prettytable-rs = "0.10"
tempfile = "3.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
fake = { version = "2.9", features = ["derive"] }
rand = "0.8"

[workspace]
members = [
    "crates/brea-core",
    "crates/brea-scrapers",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"
tokio-test = "0.4"

[[bench]]
name = "performance"
path = "tests/benches/performance.rs"
harness = false
