[package]
name = "brea-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
hex = "0.4.3"
rasciigraph = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tabled = { version = "0.12.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
prettytable-rs = "0.10"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.36", features = ["full", "test-util"] }