[package]
name = "brea-scrapers"
version = "0.1.0"
edition = "2021"
description = "Web scrapers for BREA Real Estate Analyzer"

[dependencies]
async-trait = "0.1"
brea-core = { path = "../brea-core" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3" 